<resources>
    <string name="app_name">FitnessApp</string>
    <string name="get_started">GET STARTED</string>
    <string name="choose_your_activity">Выберите Вашу Активность</string>
    <string name="push_ups">Отжимания</string>
    <string name="press_exercises">Занятия на пресс</string>
    <string name="pull_ups">Подтягивания</string>
    <string name="sit_ups">Приседания</string>
    <string name="text_other">Разное</string>
    <string name="author_info_btn_text">Информация об авторе</string>
    <string name="app_info_btn_text">Информация о приложении</string>
    <string name="pushups_info">Информация об упражнении</string>
    <string name="start_ex">Начать упражнение</string>
    <string name="classic_pushups_text">3. КЛАССИЧЕСКИЕ- Поставьте руки на ширине плеч, пальцы направьте вперёд. Следите, чтобы плечи находились над кистями. Напрягите пресс и ягодицы, опустите плечи и сведите лопатки. Опуститесь, глядя в пол, не задирайте голову в нижней точке. Коснитесь грудью пола и выжмите себя наверх. Двигайтесь плавно и под контролем во всех фазах движения.</string>
    <string name="diamond_pushups_text">4. АЛМАЗНЫЕ - Такие отжимания нагружают грудь и трицепс лучше классических. Встаньте в упор лёжа, поставьте кисти рядом, соедините большие и указательные пальцы рук, чтобы между ними появился ромб. Отжимайтесь в таком положении.</string>
    <string name="wide_pushups_text">5. С ШИРОКОЙ ПОСТАНОВКОЙ - Поставьте руки шире плеч, пальцы направьте вперёд или слегка в стороны. Опуститесь, сохраняя правильную форму, и выжмите себя наверх. Можете также выполнять упражнение с колен или с возвышения.</string>
    <string name="high_pushups_text">2. ОТ ВОЗВЫШЕНИЯ - Выберите возвышение высотой около 50 см и отжимайтесь от него. Чем ниже опора, тем сложнее вам будет.</string>
    <string name="knees_pushups_text">1. C КОЛЕН - Самый простой вариант. Встаньте на колени и отжимайтесь. Старайтесь сохранять правильную форму: держите локти близко к телу, не прижимайте плечи к ушам, сохраняйте спину прямой и смотрите в пол.</string>
    <string name="pushups_types_text">Виды отжиманий</string>
    <string name="types_situps_text">Виды приседаний</string>
    <string name="classic_situps_text">1. КЛАССИЧЕСКИЕ ПРИСЕДАНИЯ - Для выполнения приседаний встаньте прямо, ноги на ширине плеч, носки стоп слега развести в стороны. Напрягите поясницу, отведите таз назад и немного наклоните торс вперед, согните ноги в коленях и опуститесь как можно ниже (насколько позволяет Ваша гибкость). Затем энергично поднимитесь в исходное положение. При сгибании ног делайте глубокий вдох, при разгибании ног – выдох.</string>
    <string name="pistol_situps_text">2. ПРИСЕДАНИЯ ПИСТОЛЕТИКОМ - Исходное положение – стоя, ноги вместе. Вытяните руки вперед и начните выносить правую ногу вперед. Одновременно сгибайте левую ногу в колене. Постарайтесь опуститься как можно ниже, стараясь не касаться правой ногой пола и не теряя равновесие. Затем энергично разогните левую ногу и встаньте. Упражнение стоит повторить для второй ноги.</string>
    <string name="barbell_situps_text">3. ПРИСЕДАНИЯ СО ШТАНГОЙ НА ГРУДИ - Прижмитесь к грифу штанги грудью. Скрестите руки и положите их сверху на гриф. У Вас должна получиться стабильная конструкция, позволяющая без труда удерживать штангу на груди. Снимите штангу со стоек и сделайте шаг вперед. Ноги на ширине плеч. Аккуратно согните ноги, опустившись в глубокий присед. Обратите внимание, это единственны вариант. Поднимайтесь из приседа быстро, решительно.</string>
    <string name="dumbells_situps_text">4. ПРИСЕДАНИЯ С ГАНТЕЛЯМИ В РУКАХ - Возьмите гантели в руки и встаньте прямо. Ноги на ширине не более 20-30 см. Если поставить ноги шире, это заметно осложнит выполнение приседаний, так как гантели должны находиться по бокам и будут задевать Вас и мешать приседать. Напрягите поясницу, отведите таз назад, наклоните торс вперед и сгибайте ноги в коленях. Обычно достаточно опуститься до положения “бедра параллельны полу”. Затем энергично разогните ноги и встаньте в исходное положение.</string>
    <string name="bolgarian_situps_text">5. БОЛГАРСКИЙ СПЛИТ-ПРИСЕД - Возьмите гантели в руки и встаньте спиной к скамье, примерно в 60 см от нее. Основная работа должна выполняться мышцами левой ноги и левой ягодицей. Плавно присядьте как можно глубже на левой ноге. Затем энергично поднимитесь в исходное положение. Затем сразу же необходимо выполнить такой же подход для правой ноги.</string>
    <string name="back_text">Назад</string>
    <string name="info_app_text">Информация о приложении</string>
    <string name="about_app_big_text">Данное приложение представляет собой простешую реализацию приложения - фитнес тренера. Хоть функционал очень мал, но даже этого хватит чтобы вести регулярные занятия и совершенствовать себя.</string>
    <string name="author_info_text">Информация об авторе</string>
    <string name="author_info_big_text">Всех приветствую, я автор этого приложения. Меня зовут Лазарев Александр, я ученик 10-ого класса. Это приложение что-то вроде моего творчества, не несет сложных функций, а лишь показывает то, что я умею.</string>
    <string name="author_info_big_text2">В случае нахождения ошибок приложения, пишите на почту: sashalazyr@gmail.com</string>
    <string name="author_info_big_text3">Также связывайтесь со мной по номеру телефона: +79805572371.</string>
    <string name="author_info_big_text4">Я приму любые предложения и критику, обращайтесь, буду рад исправить недочеты</string>
    <string name="types_press_ex">Виды занятий на пресс</string>
    <string name="plank_text">1. ПЛАНКА - Это самое знаменитое статическое упражнение для пресса. Кстати, планка тренирует не только мышцы пресса, но и множество других мышц всего тела. Планка прекрасно развивает выносливость и отлично сушит тело (избавляет от лишних килограммов). Встаньте на четвереньки, а затем примите положение планки, стоя на локтях.</string>
    <string name="leg_raises_press_text">2. ПОДЪЕМЫ ПРЯМЫХ НОГ ЛЕЖА - Поднимать ноги лежа очень полезно. Лягте на коврик, ноги вместе. Приподнимите голову от пола и согните руки в локтях, как показано на фото. Если голову удерживать трудно, положите руки за голову и придерживайте её ладонями. Плавно поднимайте и опускайте прямые ноги, слегка касаясь пятками пола. При подъеме ног делайте выдох, при опускании – вдох.</string>
    <string name="twisting_press_text">3. СКРУЧИВАНИЯ ЛЕЖА - Лягте на коврик, руки за голову, ноги согните в коленях. Затем на выдохе опустить грудную клетку и немного приподнять тело, оторвав спину от пола. Не стремитесь, выполняя скручивания, поднимать тело слишком высоко. Этого не требуется. Обратите внимание на положение головы и рук. Не следует тянуть голову руками! Голова свободно лежит на ладонях и приподнимается лишь немного вместе с телом. Локти все время держите разведенными в стороны.</string>
    <string name="sitap_text">4. СИТАП - Лягте на коврик, согните ноги в коленях, руки вытяните в сторону головы. Энергично поднимите руки и быстро подтяните за ними тело, чтобы оказаться в положении сидя, как показано на фото. Ситап следует выполнять без пауз, непрерывно поднимая и опуская тело. Если при выполнении ситапа Ваши ноги отрываются от пола, можно зацепиться ими за неподвижную опору: диван, шкаф, тренажер и т.д. Или попросите напарника по тренировкам подержать Вас за стопы, пока выполняете подход.</string>
    <string name="knee_pullups_press_text">5. ПОДТЯГИВАНИЯ КОЛЕНЕЙ К ГРУДИ НА ТУРНИКЕ - Необходимо выполнять его в висе на турнике. Это требует сильных рук. Рекомендую использовать специальные перчатки, чтобы не получить мозоли на ладонях. Необходимо повиснуть на турнике так, чтобы ноги не касались пола. Мышцы пресса должны быть расслаблены и растянуты. Энергично подтяните колени к груди, одновременно сгибая ноги в коленях. Задержитесь в этом положении на мгновение, почувствовав напряжение и сокращение мышц пресса. Затем плавно верните ноги в исходное положение. Выполняйте подъемы ног непрерывно, без длительных пауз между повторениями.</string>
    <string name="pressEx_text">ЗАНЯТИЯ НА ПРЕСС</string>
    <string name="pullUps_text">ПОДТЯГИВАНИЯ</string>
    <string name="types_pullUps_text">Виды подтягиваний</string>
    <string name="straight_grip_pullups_text">1. ПРЯМЫМ ХВАТОМ - Повисните на турнике, опустите плечи и сведите лопатки. Подтяните себя вверх до выхода подбородка за турник и опуститесь обратно. Совершайте движение плавно и под контролем. Не вытягивайте шею вверх или вперёд, не расслабляйте плечи в нижней части подтягивания.</string>
    <string name="australian_pullups_text">2. АВСТРАЛИЙСКИЕ - Для таких подтягиваний нужен невысокий турник. Возьмитесь за низкий турник прямым хватом на ширине плеч, вытяните тело в одну линию. Подтяните себя до касания турника грудью и опуститесь обратно.</string>
    <string name="reverse_grip_pullups_text">3. ОБРАТНЫМ ХВАТОМ - Такой хват чуть больше нагружает бицепс и подостную мышцу, выстилающую лопатку. Впрочем, различия в нагрузке незначительны. Многим людям проще подтягиваться обратным хватом из‑за удобного расположения предплечий, поэтому можете начать освоение классических подтягиваний с него.</string>
    <string name="commando_pullups_text">4. КОММАНДО - Это подтягивания нейтральным хватом, но на одной перекладине. Упражнение усложняется за счёт необходимости стабилизировать корпус. Если вы расслабитесь, тело будет раскачиваться и разворачиваться в разные стороны. Подтягивайтесь до выхода головы на турник, чередуйте стороны через раз.</string>
    <string name="wide_pullups_text">5. ШИРОКИМ ХВАТОМ - Такой вариант сложнее подтягиваний с руками на ширине плеч, так что приступайте к освоению, только когда хорошо научитесь подтягиваться в классике. Возьмитесь за перекладину прямым хватом шире плеч, подтянитесь до касания грудью турника и опуститесь обратно.</string>
    <string name="push_ups_text">ОТЖИМАНИЯ</string>
    <string name="sitUps_text">ПРИСЕДАНИЯ</string>
    <string name="start_doing_ex_text">Начинайте делать упражнение</string>
    <string name="start_time">00:00</string>
    <string name="start">Start</string>
    <string name="reset">reset</string>
</resources>