<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PushUpsInfo"
    android:background="@color/background_main_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:background="@color/mainOrange"
        android:breakStrategy="high_quality"
        android:enabled="true"
        android:padding="5dp"
        android:selectAllOnFocus="true"
        android:shadowColor="#090707"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="10"

        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/pushups_types_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold|italic"
        app:drawableTint="#000000"
        app:emojiCompatEnabled="true"
        tools:ignore="TextContrastCheck" />

    <Button
        style="@style/Widget.Material3.Button"
        android:id="@+id/btn_goBack_from_pullups_info"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#E3B47C"
        android:text="Назад"
        android:textColor="#000000"
        android:textSize="14sp"

        app:icon="@drawable/ic_back"
        app:iconTint="#000000"
        app:strokeColor="#000000"
        app:strokeWidth="5dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"

        android:text="@string/knees_pushups_text"
        android:textSize="15sp"
        android:textStyle="bold" >
    </TextView>

    <ImageView
        android:paddingTop="10dp"

        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:paddingHorizontal="10dp"
        android:src="@drawable/knees_pushups"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"

        android:text="@string/high_pushups_text"
        android:textSize="15sp"
        android:textStyle="bold" >

    </TextView>
    <ImageView
        android:paddingTop="10dp"

        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:paddingHorizontal="10dp"
        android:src="@drawable/high_pushups"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"

        android:text="@string/classic_pushups_text"
        android:textSize="15sp"
        android:textStyle="bold" >

    </TextView>

    <ImageView
        android:paddingTop="10dp"

        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/classic_pushups"
        android:paddingHorizontal="10dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"

        android:text="@string/diamond_pushups_text"
        android:textSize="15sp"
        android:textStyle="bold" >

    </TextView>
    <ImageView
        android:paddingTop="10dp"

        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/diamond_pushups"
        android:paddingHorizontal="10dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"

        android:text="@string/wide_pushups_text"
        android:textSize="15sp"
        android:textStyle="bold" >

    </TextView>

    <ImageView
        android:paddingTop="10dp"

        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/wide_pushups"
        android:paddingHorizontal="10dp"

        />
</LinearLayout>
</ScrollView>
