<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main_color"
    android:orientation="vertical"
    tools:context=".AboutTheApplicationActivity">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:background="@color/mainOrange"
        android:breakStrategy="high_quality"
        android:enabled="true"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:selectAllOnFocus="true"
        android:shadowColor="#090707"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="10"

        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/info_app_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold|italic"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_goBack_from_about_app"
        style="@style/Widget.Material3.Button"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#E3B47C"
        android:text="@string/back_text"
        android:textColor="#000000"
        android:textSize="14sp"
        app:icon="@drawable/ic_back"
        app:iconTint="#000000"
        app:strokeColor="#000000"
        app:strokeWidth="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingTop="10dp"
        android:text="@string/about_app_big_text"

        android:textSize="30sp" />


</LinearLayout>