<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBCD95"


    android:gravity="fill_horizontal"
    android:orientation="vertical"
    tools:context=".ChooseActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:background="@color/mainOrange"
        android:breakStrategy="high_quality"
        android:enabled="true"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:selectAllOnFocus="true"
        android:shadowColor="#090707"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="10"

        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/choose_your_activity"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold|italic"
        app:drawableTint="#000000"
        app:emojiCompatEnabled="true"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_pushups"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/mainOrange"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:stateListAnimator="@android:anim/fade_out"
        android:text="@string/push_ups"
        android:textSize="24sp"
        app:cornerRadius="30dp"
        app:icon="@drawable/pushups"
        app:iconGravity="textTop"
        app:iconSize="35dp"
        app:iconTint="#000000"
        app:strokeColor="#000000"
        app:strokeWidth="1dp"
        tools:ignore="TextContrastCheck" />


    <Button
        android:id="@+id/btn_press_exercises"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/mainOrange"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:text="@string/press_exercises"
        android:textSize="24sp"
        app:cornerRadius="30dp"
        app:icon="@drawable/press_exercises"
        app:iconGravity="textTop"
        app:iconSize="35dp"
        app:iconTint="#000000"
        app:strokeColor="#000000"
        app:strokeWidth="1dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_pullups"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/mainOrange"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:text="@string/pull_ups"
        android:textSize="24sp"
        app:cornerRadius="30dp"
        app:icon="@drawable/pullups"
        app:iconGravity="textTop"
        app:iconSize="35dp"
        app:iconTint="#000000"
        app:strokeColor="#000000"
        app:strokeWidth="1dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_situps"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/mainOrange"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:text="@string/sit_ups"
        android:textSize="24sp"
        app:cornerRadius="30dp"
        app:icon="@drawable/sit_ups"
        app:iconGravity="textTop"
        app:iconSize="35dp"
        app:iconTint="#000000"
        app:strokeColor="#000000"
        app:strokeWidth="1dp"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bNav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/mainOrange"
            app:itemIconTint="@drawable/bottom_nav_selector"
            app:itemTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>